# Copyright 2025-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[package]
name = "datadog-ffe-ffi"
edition.workspace = true
version = "1.0.2"
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
bench = false

[features]
default = ["cbindgen"]
cbindgen = ["build_common/cbindgen", "libdd-common-ffi/cbindgen"]

[build-dependencies]
build_common = { path = "../build-common" }

[dependencies]
anyhow = "1.0.93"
datadog-ffe = { path = "../datadog-ffe", version = "=1.0.0" }
libdd-http-client = { path = "../libdd-http-client", default-features = false, features = ["https", "reqwest-backend"] }
libdd-common-ffi = { path = "../libdd-common-ffi", default-features = false }
function_name = "0.3.0"
tokio = { version = "1.23", features = ["rt", "time"] }

[dev-dependencies]
