load("//rules/rust:defs.bzl", "dd_cargo_dot_toml", "dd_rust_library", "dd_rust_test")
load("//third_party/crates:defs.bzl", "all_crate_deps")

dd_cargo_dot_toml(src = "Cargo.toml")

dd_rust_library(
    name = "ffe-evaluation",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True) + [
        "//domains/ffe/libs/flagging/core/ufc_v2/flatbuffers/rust:ufc_v2_fbs",
    ],
)

dd_rust_test(
    name = "test",
    crate = ":ffe-evaluation",
    data = glob([
        "tests/data/**",
    ]),
    deps = all_crate_deps(normal_dev = True),
)
