[package]
name = "datadog-ffe"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
faststr = { version = "0.2.23", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = { version = "2.0.0", default-features = false, features = ["from", "into"] }
log = { version = "0.4.21", features = ["kv", "kv_serde"] }
md5 = "0.7.0"
regex = "1.10.4"
serde-bool = "0.1.3"
serde_with = { version = "3.11.0", default-features = false, features = ["base64", "hex", "macros"] }
thiserror = "2.0.3"
url = "2.5.0"

[dev-dependencies]
env_logger = "0.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ufc_comparison"
harness = false
