[package]
name = "datadog-ffe"
version = "1.0.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
autobenches = false
publish = false

[lib]
bench = false

[dependencies]
libdd-remote-config = { path = "../libdd-remote-config", default-features = false, optional = true }
faststr = { version = "0.2.23", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
serde_json = { version = "1.0", default-features = false, features = ["std", "raw_value"] }
chrono = { version = "0.4.38", default-features = false, features = ["now", "serde"] }
derive_more = { version = "2.0.0", default-features = false, features = ["from", "into"] }
log = { version = "0.4.21", default-features = false, features = ["kv", "kv_serde"] }
md5 = { version = "0.7.0", default-features = false }
libdd-common = { version = "5.0.0", path = "../libdd-common", default-features = false, features = ["require-regex-full"] }
semver = "1.0"
serde-bool = { version = "0.1.3", default-features = false }
serde_with = { version = "3.11.0", default-features = false, features = ["base64", "hex", "macros"] }
thiserror = { version = "2.0.3", default-features = false }
url = { version = "2.5.0", default-features = false, features = ["std"] }
lru = { version = "0.16.3", optional = true }
libdd-trace-protobuf = { path = "../libdd-trace-protobuf", optional = true }
prost = { version = "0.14.1", optional = true }
pyo3 = { version = "0.28", optional = true, default-features = false, features = ["macros"] }

[features]
default = ["remote-config"]
exposure-events = ["dep:lru"]
evaluation-metrics = ["dep:libdd-trace-protobuf", "dep:prost"]
pyo3 = ["dep:pyo3"]
remote-config = ["dep:libdd-remote-config"]
