[package]
edition = "2021"
license = "Apache 2.0"
name = "datadog-live-debugger"
version = "0.0.1"

[dependencies]
anyhow = "1.0"
ddcommon = { path = "../ddcommon" }
hyper = { workspace = true}
http-body-util = "0.1"

regex = "1.9.3"
percent-encoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-info = { version = "0.9.0" }
uuid = { version = "1.0", features = ["v4"] }
regex-automata = "0.4.5"
smallvec = "1.13.2"
constcat = "0.4.1"
tokio = "1.36.0"

[lib]
bench = false
