[package]
edition = "2021"
license = "Apache 2.0"
name = "datadog-live-debugger"
version = "0.0.1"
publish = false

[dependencies]
anyhow.workspace = true
libdd-remote-config = { path = "../libdd-remote-config", default-features = false }
libdd-common = { path = "../libdd-common" }
libdd-data-pipeline = { path = "../libdd-data-pipeline" }
http-body-util = "0.1"
"http" = "1"
bytes =  "1.11.1"
futures = "0.3"

percent-encoding = "2.1"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
sys-info = { version = "0.9.0" }
uuid = { version = "1.0", features = ["v4"] }
smallvec = "1.13.2"
constcat = "0.4.1"
tokio = "1.36.0"

[features]
regex-lite = ["libdd-common/regex-lite"]

[lib]
bench = false
