# Copyright 2025-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[package]
name = "datadog-profiling-otel"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3.0.0"

[dev-dependencies]
bolero = "0.13"
