# Copyright 2025-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[package]
name = "datadog-profiling-protobuf"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
bench = false

[features]
prost_impls = ["dep:prost"]

[dependencies]
prost = { version = "0.13", optional = true }

[dev-dependencies]
bolero = "0.13"
datadog-profiling-protobuf = { path = ".", features = ["prost_impls"] }
