# Copyright 2025-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[package]
name = "datadog-profiling-protobuf"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
bench = false

[features]
bolero = ["dep:bolero"]
prost_impls = ["dep:prost"]

[dependencies]
prost = { version = "0.13", optional = true }
bolero = { version = "0.13", default-features = false, optional = true }

[dev-dependencies]
bolero = "0.13"
datadog-profiling-protobuf = { path = ".", features = ["bolero", "prost_impls"] }
