[package]
name = "datadog-profiling-replayer"
authors = ["Levi Morrison <levi.morrison@datadoghq.com>"]
description = "Takes a pprof file and 'replays' it using libdatadog commands."
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.21", features = ["cargo", "color", "derive"] }
datadog-profiling = { path = "../datadog-profiling2" }
datadog-profiling-protobuf = { path = "../datadog-profiling-protobuf", features = ["prost_impls"] }
prost = "0.13.5"
sysinfo = { version = "0.29.8", default-features = false }

[[bin]]
name = "datadog-profiling-replayer"
bench = false
